Update to version 1.0.8

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "posetmage-icon",
   "displayName": "PosetMage Icon",
   "description": "show PosetMage icon at left bar",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "engines": {
     "vscode": "^1.77.0"
   },
@@ -21,8 +21,8 @@
     "viewsContainers": {
       "activitybar": [
         {
-          "id": "my-custom-icon",
-          "title": "My Custom Icon",
+          "id": "PosetMage-Icon",
+          "title": "PostMage Icon",
           "icon": "resources/pom.svg"
         }
       ]
