--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "posetmage-icon",
   "displayName": "PosetMage Icon",
   "description": "show PosetMage icon at left bar",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "engines": {
     "vscode": "^1.77.0"
   },
@@ -21,8 +21,8 @@
     "viewsContainers": {
       "activitybar": [
         {
-          "id": "PosetMage-Icon",
-          "title": "PostMage Icon",
+          "id": "posetmage-icon",
+          "title": "PosetMage Icon",
           "icon": "resources/pom.svg"
         }
       ]
