--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "posetmage-icon",
   "displayName": "PosetMage Icon",
   "description": "show PosetMage icon at left bar",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "engines": {
     "vscode": "^1.77.0"
   },
@@ -28,10 +28,10 @@
       ]
     },
     "views": {
-      "my-custom-icon": [
+      "posetmage-icon": [
         {
-          "id": "myCustomView",
-          "name": "My Custom View"
+          "id": "PosetMageIcon",
+          "name": "PosetMage Icon"
         }
       ]
     }
