--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "posetmage-icon",
   "displayName": "PosetMage Icon",
   "description": "show PosetMage icon at left bar",
-  "version": "1.0.13",
+  "version": "1.0.15",
   "engines": {
     "vscode": "^1.78.0"
   },
@@ -42,19 +42,21 @@
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
+    "test": "node ./out/test/runTest.js",
+    "release": "standard-version"
   },
   "devDependencies": {
-    "@types/vscode": "^1.78.0",
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
+    "@types/vscode": "^1.78.0",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
+    "@vscode/test-electron": "^2.3.0",
     "eslint": "^8.39.0",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
-    "typescript": "^5.0.4",
-    "@vscode/test-electron": "^2.3.0"
+    "standard-version": "^9.5.0",
+    "typescript": "^5.0.4"
   }
 }
