--- a/package.json
+++ b/package.json
@@ -58,5 +58,8 @@
     "mocha": "^10.2.0",
     "standard-version": "^9.5.0",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "commander": "^10.0.1"
   }
 }
